GNOME Bugzilla – Bug 756978
Deadlock in the places widget
Last modified: 2015-11-12 20:50:10 UTC
It seems that Nautilus is trying to create and/or access the places view from different threads, and it results in a deadlock, with the whole UI frozen. I managed to attach GDB to the Nautilus process, and got this backtrace:
+ Trace 235612
Potential cause: the GtkPlacesView widget inside GTK+ exposes some public functions even though the API is meant to be private. Nautilus is trying to use the public symbols with the internal API and the type system gets confused.
I pushed a commit to GTKmaster that removes those symbols: commit 2fcbf996c672eb8dcb1ed91b56028a4df3180c16 Author: Benjamin Otte <otte@redhat.com> Date: Mon Nov 9 01:44:01 2015 +0100 placesview: Don't export API This is a private object, don't export its symbols. Because git-bz makes it so easy I'll mark close the bug. If this fix doesn't help, please reopen.
Created attachment 315373 [details] [review] gtkplacesview: remove GDK_AVAILABLE_* It was causing problems locking up the view and they are actually wrong and unecessary
Comment on attachment 315373 [details] [review] gtkplacesview: remove GDK_AVAILABLE_* Attachment 315373 [details] pushed as beea39e - gtkplacesview: remove GDK_AVAILABLE_*