placesview: Don't export API

This is a private object, don't export its symbols.

https://bugzilla.gnome.org/show_bug.cgi?id=756978